Añadidas pruebas con Mockito